--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,9 @@
-PORT=3001
+PORT=4001
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 NODE_ENV=development
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:4000
+
+# Default Admin User
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin123
+ADMIN_DISPLAY_NAME=Administrator
