added example admin email

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,8 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 ADMIN_DISPLAY_NAME=Administrator
 
+ADMIN_EMAIL=my@admin.com
+
 # Google OAuth
 ENABLE_GOOGLE_OAUTH=false
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
